🐛 fix: (elasticsearch)  'new' 정렬 정상화
Elasticsearch 색인 시 '출간일 내림차순(new)' 정렬이 동작하지 않는 문제 해결.
기존 publicationDate가 문자열(String)로 매핑되어 정렬 불가능했던 문제를,
Integer 타입으로 매핑되도록 수정함. 관련 매핑 및 DTO/엔티티 변환도 반영.